# confluence-sync

./: .gitignore  README.md  pyproject.toml
confluence_sync/: api.py  cli.py  config.py  converter.py  state.py  syncer.py
tests/: test_config.py  test_converter.py  test_state.py  test_syncer.py
